# WorkoutTimer

./: .gitignore  CREDITS.md  LICENSE  README.md  io.github.NikolausB.WorkoutTimer.yml  local-training.yml  meson.build  run.sh
.github/workflows/: flatpak.yml
data/: io.github.NikolausB.WorkoutTimer.desktop  io.github.NikolausB.WorkoutTimer.metainfo.xml  meson.build
screenshots/: WorkoutTimer.webm
src/: ai_coach.py  controller_hints.py  controller_manager.py  csv_io.py  data_store.py  exercise_picker.py  history.py  home.py  image_utils.py  llm_client.py  main.py  meson.build  models.py  preferences.py  round_timer.py  settings.py  sound.py  timer_core.py  training_plan.py  ui_scaling.py  user_exercises.py  virtual_keyboard.py  window.py
src/resources/plans/: default_plans.json
